# libcamera

./: .gitignore  install-rp1-overclock.sh  rp1-300mhz.dtso
.github/workflows/: dpkg-release.yml
debian/: changelog  control  libcamera-dev-qbcfork.install  libcamera-ipa-qbcfork.install  libcamera-v4l2-qbcfork.install  libcamera0.7-qbcfork.install  python3-libcamera-qbcfork.install  rules
docs/: QBC_CLEARHDR_USAGE.md
scripts/: capture_baseline.sh
src/ipa/rpi/cam_helper/: cam_helper_gmax3412.cpp  cam_helper_imx294.cpp  cam_helper_imx492.cpp  cam_helper_imx585.cpp  cam_helper_imx662.cpp  cam_helper_imx678.cpp  cam_helper_sc910gs.cpp  meson.build
src/ipa/rpi/common/: ipa_base.cpp  ipa_base.h
src/ipa/rpi/controller/: controller.cpp
src/ipa/rpi/pisp/: pisp.cpp
src/ipa/rpi/pisp/data/: gmax3412.json  imx283.json  imx294.json  imx492_mono.json  imx585.json  imx585_mono.json  meson.build  sc910gs.json
src/ipa/rpi/vc4/data/: gmax3412.json  imx283.json  imx294.json  imx492_mono.json  imx585.json  meson.build  sc910gs.json
src/libcamera/: control_ids_rpi.yaml
src/libcamera/pipeline/rpi/common/: pipeline_base.cpp  rpi_stream.h
src/libcamera/pipeline/rpi/pisp/: ccmp_unwrap.cpp  ccmp_unwrap.h  meson.build  pisp.cpp  qbc_remosaic.cpp  qbc_remosaic.h  raw_stats.cpp  raw_stats.h  tuning_helpers.cpp  tuning_helpers.h
src/libcamera/sensor/: camera_sensor_properties.cpp
